Reorder & rename sections

--- a/home/index.html
+++ b/home/index.html
@@ -41,13 +41,13 @@
             <div id="buttons">
                 <ul>
                     <li><a href="#" data-scroll="introduction">Introduction</a></li>
+                    <li><a href="#" data-scroll="strokes">Strokes</a></li>
                     <li><a href="#" data-scroll="fonts">Fonts</a></li>
+                    <li><a href="#" data-scroll="demos">Demos</a></li>
                     <li><a href="#" data-scroll="screenshots">Screenshots</a></li>
-                    <li><a href="#" data-scroll="drawing">Drawing</a></li>
-                    <li><a href="#" data-scroll="pills">Red &amp; Blue Pill</a></li>
                     <li><a href="#" data-scroll="installation">Installation</a></li>
-                    <li><a href="#" data-scroll="projecthistory">Project History</a></li>
-                    <li><a href="#" data-scroll="followus">Follow us!</a></li>
+                    <li><a href="#" data-scroll="history">Project History</a></li>
+                    <li><a href="#" data-scroll="social">Social Media</a></li>
                 </ul>
             </div>
         </div>
@@ -67,37 +67,8 @@
                     <div class="subscript"><a href="https://github.com/metapolator/metapolator/wiki/interaction-design#the-product-phase" target="_blank">Product Vision</a> by Peter Sikking, UI Architect</div>
             </section>
 
-            <section data-anchor="fonts">
-                <h1>Fonts Made With Metapolator</h1>
-                <div class="bullets"></div>
-                <div class="content">
-                    <b>New Families</b><br>
-                    Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
-                    <br><br>
-                    <img src="img/Font.svg">
-                    <div class="bullets"></div>
-                </div>
-            </section>
-
-            <section data-anchor="screenshots" class="red">
-                <h1>Screenshots</h1>
-                <div class="bullets"></div>
-                <div class="content">
-                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES"><img src="img/simon-workflow.gif" width="400px"></a>
-                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM" style="padding-left:1em"><img src="img/red-pill.png" width="400px"></a>
-                     <br><br>
-                     <p>
-                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
-                     </p>
-                     <p>
-                     <a href="https://plus.google.com/+DaveCrossland/posts/dpMQUJtQ9Tf">Video introduction to Simon's workflow</a> (2015-01-27, 30 mins)
-                     </p>
-                </div>
-                <div class="bullets"></div>
-            </section>
-
-            <section data-anchor="drawing">
-                <h1>Drawing With Strokes</h1>
+            <section data-anchor="strokes">
+                <h1>Drawing The Metapolator Way</h1>
                 <div class="bullets"></div>
                 <div class="content">                    
                     The core of Metapolator is the stroke element, re-implemented from Metafont. 
@@ -117,7 +88,19 @@
                 </div>
             </section>
 
-            <section data-anchor="pills" class="grey">
+            <section data-anchor="fonts">
+                <h1>Fonts Made With Metapolator</h1>
+                <div class="bullets"></div>
+                <div class="content">
+                    <b>New Families</b><br>
+                    Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
+                    <br><br>
+                    <img src="img/Font.svg">
+                    <div class="bullets"></div>
+                </div>
+            </section>
+
+            <section data-anchor="demos" class="grey">
                 <h1>Red Pill</h1>
                 <div class="bullets"></div>
                 <div class="content">
@@ -152,6 +135,23 @@
                 <div class="bullets"></div>
             </section>  
 
+            <section data-anchor="screenshots" class="red">
+                <h1>Screenshots</h1>
+                <div class="bullets"></div>
+                <div class="content">
+                     <a href="https://plus.google.com/100858309774292261525/posts/CTx8bUqo6ES"><img src="img/simon-workflow.gif" width="400px"></a>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM" style="padding-left:1em"><img src="img/red-pill.png" width="400px"></a>
+                     <br><br>
+                     <p>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dahVFykbWSM">Video introduction to Lasse's workflow</a> (2015-01-28, 2 hours)
+                     </p>
+                     <p>
+                     <a href="https://plus.google.com/+DaveCrossland/posts/dpMQUJtQ9Tf">Video introduction to Simon's workflow</a> (2015-01-27, 30 mins)
+                     </p>
+                </div>
+                <div class="bullets"></div>
+            </section>
+
             <section data-anchor="installation" class="red">
                 <h1>Installation</h1>
                 <div class="bullets"></div>
@@ -162,7 +162,7 @@
                 <div class="bullets"></div>
             </section>
 
-            <section data-anchor="projecthistory">
+            <section data-anchor="history">
                 <h1>Project History</h1>
                 <div class="bullets"></div>
                 <div class="content">
@@ -207,7 +207,7 @@
                 <div class="bullets"></div>
             </section>  
 
-            <section data-anchor="followus" class="red">
+            <section data-anchor="social" class="red">
                 <h1>Follow us!</h1>
                 <div class="bullets black"></div>
                 <div class="content">
