Use IDs for nav buttons

--- a/home/index.html
+++ b/home/index.html
@@ -40,14 +40,14 @@
             <div id="logo"><img src="img/mp-logo.svg"></div>
             <div id="buttons">
                 <ul>
-                    <li><a href="#" data-scroll="introduction">Introduction</a></li>
-                    <li><a href="#" data-scroll="strokes">Strokes</a></li>
-                    <li><a href="#" data-scroll="fonts">Fonts</a></li>
-                    <li><a href="#" data-scroll="demos">Demos</a></li>
-                    <li><a href="#" data-scroll="screenshots">Screenshots</a></li>
-                    <li><a href="#" data-scroll="installation">Installation</a></li>
-                    <li><a href="#" data-scroll="history">Project History</a></li>
-                    <li><a href="#" data-scroll="social">Social Media</a></li>
+                    <li><a href="#introduction" data-scroll="introduction">Introduction</a></li>
+                    <li><a href="#strokes" data-scroll="strokes">Strokes</a></li>
+                    <li><a href="#fonts" data-scroll="fonts">Fonts</a></li>
+                    <li><a href="#demos" data-scroll="demos">Demos</a></li>
+                    <li><a href="#screenshots" data-scroll="screenshots">Screenshots</a></li>
+                    <li><a href="#installation" data-scroll="installation">Installation</a></li>
+                    <li><a href="#history" data-scroll="history">Project History</a></li>
+                    <li><a href="#social" data-scroll="social">Social Media</a></li>
                 </ul>
             </div>
         </div>
@@ -80,6 +80,7 @@
                         <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                         <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
                     </div>
+                    <br><br>
                     Fonts can be drawn with existing traditional font editors and imported into Metapolator.
                     For this to work well, each glyph should be broken up into its individual strokes, and each stroke should have an equal amount of paired points. 
                     Metapolator will convert these into strokes.
