Rename menu items

--- a/home/index.html
+++ b/home/index.html
@@ -41,8 +41,8 @@
             <div id="buttons">
                 <ul>
                     <li><a href="#introduction" data-scroll="introduction">Introduction</a></li>
-                    <li><a href="#strokes" data-scroll="strokes">Strokes</a></li>
-                    <li><a href="#fonts" data-scroll="fonts">Fonts</a></li>
+                    <li><a href="#strokes" data-scroll="strokes">The Stroke</a></li>
+                    <li><a href="#fonts" data-scroll="fonts">Our Fonts</a></li>
                     <li><a href="#demos" data-scroll="demos">Demos</a></li>
                     <li><a href="#screenshots" data-scroll="screenshots">Screenshots</a></li>
                     <li><a href="#history" data-scroll="history">Project History</a></li>
