--- a/home/index.html
+++ b/home/index.html
@@ -79,24 +79,28 @@
                         <canvas class="float-element-1" id="pencanvas" width="400" height="400"></canvas>
                         <iframe class="float-element-2" width="400" height="400" src="https://www.youtube.com/embed/LlvO4n6vd-U" frameborder="0" allowfullscreen></iframe>
                     </div>
-                    <br><br>
+                </div>
+            </section>
+
+            <section data-anchor="fonts">
+                <div class="bullets"></div>
+                <h1>Fonts Made With Metapolator</h1>
+                <div class="bullets"></div>
+                <div class="content">
+                    <b>Existing Fonts</b><br>
                     Fonts can be drawn with existing traditional font editors and imported into Metapolator.
                     For this to work well, each glyph should be broken up into its individual strokes, and each stroke should have an equal amount of paired points. 
                     Metapolator will convert these into strokes.
                     <br><br>
                     <img src="img/Latin.svg"><br><br>
-                </div>
-            </section>
-
-            <section data-anchor="fonts">
-                <h1>Fonts Made With Metapolator</h1>
-                <div class="bullets"></div>
-                <div class="content">
-                    <b>New Families</b><br>
-                    Work Sans, Sean Sans and Breite are being developed as the first true Metapolator font families. 
+                    <br><br>
+                    <b>New Fonts</b><br>
+                    <a href="https://github.com/weiweihuanghuang/Work-Sans">Work Sans</a>, 
+                    <a href="https://github.com/metapolator/sean">Sean Sans</a> and 
+                    <a href="https://github.com/metapolator/Breite">Breite</a> 
+                    are being developed as the first font families with Metapolator in mind.
                     <br><br>
                     <img src="img/Font.svg">
-                    <div class="bullets"></div>
                 </div>
             </section>
 
