Fix bullets color in social media section

--- a/home/index.html
+++ b/home/index.html
@@ -203,7 +203,7 @@
 
             <section data-anchor="social" class="red">
                 <h1>Follow us!</h1>
-                <div class="bullets black"></div>
+                <div class="bullets"></div>
                 <div class="content">
                      <div class="content-center content-follow">
                          <img src="img/google-plus.png" width="48"><br>
