Fix menu label of demos

--- a/home/index.html
+++ b/home/index.html
@@ -44,7 +44,7 @@
                     <li><a href="#strokes" data-scroll="strokes">The Stroke</a></li>
                     <li><a href="#fonts" data-scroll="fonts">Our Fonts</a></li>
                     <li><a href="#screenshots" data-scroll="screenshots">Screenshots</a></li>
-                    <li><a href="#demos" data-scroll="demos">Technology Preview</a></li>
+                    <li><a href="#demos" data-scroll="demos">Live Prototypes</a></li>
                     <li><a href="#history" data-scroll="history">Project History</a></li>
                     <li><a href="#social" data-scroll="social">Social Media</a></li>
                 </ul>
