--- a/home/index.html
+++ b/home/index.html
@@ -139,6 +139,7 @@
                         <designspace ng-controller="designspaceController"></designspace>
                     </div>
                 </div>
+                <div class="bullets"></div>
             </section>  
 
             <section data-anchor="history">
