removed some junk

--- a/home/index.html
+++ b/home/index.html
@@ -141,13 +141,10 @@
                     </div>
                     <br><br>
                     <br><br>
-<<<<<<< Updated upstream
-=======
                     <div ng-controller="glyphController">
                         <div id="glyph"></div>
                         <glyphslider></glyphslider>
                     </div>
->>>>>>> Stashed changes
                 </div>
                 <div class="bullets"></div>
             </section>  
@@ -207,8 +204,8 @@
                          <img src="img/github.svg" width="48"><br>
                          Contribute at <a href="https://github.com/metapolator/" target="_blank">Github</a>
                     </div>
-                    <div class="pen-icon"><img src="img/pen-white.png"></div>
                 </div>
+                <div class="bullets"></div>
             </section>
         </div>
         <!-- end of pagewrap -->
