--- a/slider/index.html
+++ b/slider/index.html
@@ -33,6 +33,7 @@
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
+        <script src='js/filters.js'></script>
         <script src='js/controllers/menuController.js' type='text/javascript'></script>
         <script src='js/controllers/parametersController.js' type='text/javascript'></script> 
         <script src='js/controllers/specimenController.js' type='text/javascript'></script>
