--- a/home/index.html
+++ b/home/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Metapolator</title>
 
@@ -23,7 +22,7 @@
         <script src='js/sortable.js' type='text/javascript'></script>
 
         <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
         <link rel="stylesheet" type="text/css" href="css/alice.css">
         <link rel="stylesheet" type="text/css" href="css/bluepill.css">
 
