size rope as directive
size rope as directive (no more jquery), diamond, bialouts // space and
dot are also glyphs, underline 4px / blue, specimen tools fixed,

--- a/slider/index.html
+++ b/slider/index.html
@@ -101,7 +101,7 @@
                     <parameters ng-controller="parametersController"></parameters>
                 </div>
 
-                <div id="panel-2" class="panel sub-panel standard-padding">
+                <div id="panel-2" class="panel sub-panel">
                     <specimen ng-controller="specimenController"></specimen>
                 </div>
 
