--- a/slider/index.html
+++ b/slider/index.html
@@ -52,7 +52,7 @@
 
     </HEAD>
 
-    <BODY ng-app="Metapolator">
+    <BODY ng-app="Metapolator" class="unselectable">
         <div id="menu" ng-controller="menuController">
             <div id="project">
                 <div id="project-dropdown" class="dropdown">
