padding on second specimen panel

--- a/slider/index.html
+++ b/slider/index.html
@@ -119,7 +119,7 @@
                         <designspace ng-controller="designspaceController"></designspace>
                     </div>
 
-                    <div id="subpanel-4-bottom" class="sub-panel standard-padding">
+                    <div id="subpanel-4-bottom" class="sub-panel">
                         <specimen ng-controller="specimenController"></specimen>
                     </div>
                 </div>
