#346 green undeveloped panel

--- a/slider/index.html
+++ b/slider/index.html
@@ -112,6 +112,10 @@
                     <div id="subpanel-3-top" class="sub-panel">
                         <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
                     </div>
+                    
+                    <div id="subpanel-3-bottom" class="sub-panel under-construction">
+                    </div>
+                    
                 </div>
 
                 <div id="panel-4" class="panel">
@@ -129,12 +133,10 @@
                     <instances ng-controller="instancesController"></instances>
                 </div>
 
-                <div id="panel-6" class="panel sub-panel standard-padding">
-                    <fontmapping ng-controller="fontmappingController"></fontmapping>
+                <div id="panel-6" class="panel sub-panel standard-padding under-construction">
                 </div>
 
-                <div id="panel-7" class="panel sub-panel standard-padding">
-                    <metadata ng-controller="metadataController"></metadata>
+                <div id="panel-7" class="panel sub-panel standard-padding under-construction">
                 </div>
             </div>
             <!-- end of landscape -->
