making a start with the Instance List

--- a/slider/index.html
+++ b/slider/index.html
@@ -61,18 +61,10 @@
                         <li>
                             <a href="#">New</a>
                         </li>
-                        <li>
-                            <a href="#">Clone</a>
-                        </li>
-                        <li>
-                            <a href="#">Open</a>
-                        </li>
+ 
                         <li class="divider"></li>
                         <li>
-                            <a href="#">Save</a>
-                        </li>
-                        <li>
-                            <a href="#">Save As...</a>
+                            <a href="#">Close</a>
                         </li>
                     </ul>
                 </div>
