--- a/slider/index.html
+++ b/slider/index.html
@@ -125,7 +125,7 @@
                     <instances ng-controller="instancesController"></instances>
                 </div>
 
-                <div id="panel-6" class="panel sub-panel standard-padding under-construction">
+                <div id="panel-6" class="panel sub-panel standard-padding">
                 </div>
 
                 <div id="panel-7" class="panel sub-panel standard-padding under-construction">
