--- a/slider/index.html
+++ b/slider/index.html
@@ -102,7 +102,7 @@
                 <div id="panel-3" class="panel">
 
                     <div id="subpanel-3-top" class="sub-panel">
-                        <masters ng-controller="mastersController" ng-mouseup="mouseclick = false"></masters>
+                        <masters ng-controller="mastersController" class="list" type="master"></masters>
                     </div>
                     
                     <div id="subpanel-3-bottom" class="sub-panel under-construction">
@@ -122,7 +122,7 @@
 
                 <!-- start of view 3 -->
                 <div id="panel-5" class="panel sub-panel">
-                    <instances ng-controller="instancesController"></instances>
+                    <instances ng-controller="instancesController" class="list" type="instance"></instances>
                 </div>
 
                 <div id="panel-6" class="panel sub-panel standard-padding">
