--- a/slider/index.html
+++ b/slider/index.html
@@ -87,9 +87,11 @@
                         <b>Help</b>
                     </div>
                     <div class="lm-body" ng-if="data.localmenu.help">
-                        <div class="lm-content">
-                            Please post questions about usage or anything in general in the <a href="https://plus.google.com/communities/110027004108709154749" target="_blank">Metapolator Google Plus Community Page</a>.<br><br>
-                            To report a specific bug or request a feature, create a new issue in the <a href="https://github.com/metapolator/metapolator/" target="_blank">github.com/metapolator/metapolator</a>.
+                        <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">G+ Community</a></div>
+                        <div class="lm-divider"></div>                        
+                        <div class="lm-button"><a href="https://github.com/metapolator/metapolator" target="_blank">Github Project</a></div>
+                        <div class="lm-button"><a title="Browse existing feature requests and bug reports on our Github issue tracker" href="https://github.com/metapolator/metapolator/issues/new" target="_blank">Github Issues</a></div>
+                        <div class="lm-button"><a title="To report a bug or request a feature, create a new issue in our Github issue tracker" href="https://github.com/metapolator/metapolator/issues/new" target="_blank">Report New Issue</a></div>
                         </div>
                     </div>
                 </localmenu>
